<resources>
    <string name="app_name">I\'m hugry !</string>
    <string name="google_map_api_key">AIzaSyDBrw5T0cNzqnSGQW6vA_QADtMBa1t-sR8</string>

    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Ouvrir menu navigation</string>
    <string name="navigation_drawer_close">Fermer menu navigation</string>
    <string name="application_name">Go4Lunch</string>
    <string name="name_profil">John Smith</string>
    <string name="email_profil">jsmith1337@gmail.com</string>
    <string name="connection_succeed">Authentification réussie</string>
    <string name="error_authentication_canceled">erreur authentification annulée</string>
    <string name="error_no_internet">erreur pas de réseau internet</string>
    <string name="error_unknown_error">inconnue</string>
    <string name="permission_rationale_location">Cette application nécessite la permission de localisation pour fonctionner correctement</string>
    <string name="Open_drawer_menu">Ouvrir menu</string>
    <string name="Close_drawer_menu">Fermer le menu</string>
    <string name="details_restaurant_activity_image">contenu description image</string>
    <string name="details_restaurant_activity_floating_button">contenu description floating action bouton</string>
    <string name="activity_details_restaurant_name">L\'écluse</string>
    <string name="restaurant_type">Restaurant français</string>
    <string name="restaurant_address">12 rue du faubourg poissonnière</string>
    <string name="button_to_call_the_restaurant">Appel restaurant par téléphone</string>
    <string name="button_to_add_the_restaurant_to_the_favourite">Bouton j\'aime</string>
    <string name="button_to_visit_the_website_of_the_restaurant">bouton lien vers site web</string>
    <string name="call">APPELER</string>
    <string name="like">J\'AIME</string>
    <string name="website">SITE WEB</string>
    <string name="restaurant_tiret">-</string>


    <!--Facebook-->
    <string name="facebook_application_id">653886016235966</string>
    <string name="fb_login_protocol_scheme">fb653886016235966</string>
    <string name="facebook_client_token">c0221d005962bf4a690e49a858856234</string>

    <string name="hello_blank_fragment">Bonjour fragment vide</string>
    <string name="content_description_delete_button">item image view contenu description</string>
    <string name="item_text_name">A l\'Auberge</string>
    <string name="item_text_restaurant_type">Français</string>
    <string name="item_text_address">5 rue de bâle, Strasbourg</string>
    <string name="item_text_opening_hour">Ouvre bientôt</string>
    <string name="workmates_icon">contenu description collègues icon</string>
    <string name="workmates_avatar">contenu description collègues avatar</string>
    <string name="workmate_is_joining_this_restaurant">%s rejoint %s</string>
    <string name="workmate_is_joining">%s se joint à nous</string>
    <string name="workmate_has_not_selected_a_restaurant">%s n\'est pas encore décidé</string>
    <string name="search_title">Rechercher</string>
    <string name="search_query_hint">Rechercher un restaurant</string>
    <string name="search_too_short">Votre requête doit contenir au moins 3 caractères</string>
    <string name="toolbar_search_hint">Search</string>
    <string name="no_restaurant_error_message">Pas de restaurant trouvé, essayé en changeant le rayon de recherche</string>
    <string name="content_description_details_activity_image">contenu description image details</string>
    <string name="content_description_details_activity_floating_button">contenu description details activity floating bouton</string>
    <string name="content_description_image_view_menu_drawer">contenu description image view menu drawer</string>
    <string name="tiret">-</string>
    <string name="activity_main_lunch_label">VOTRE REPAS</string>
    <string name="activity_main_settings_label">PARAMETRES</string>
    <string name="activity_main_logout_label">DECONNEXION</string>
    <string name="map_view_bottom_text">Vue Map</string>
    <string name="list_view_bottom_text">Vue Liste</string>
    <string name="workmates_bottom_text">Collègues</string>
    <string name="list_view_item_text">300m</string>
    <string name="list_view_item_guest_text">(2)</string>
    <string name="content_description_image_navigation_view">contenu description image navigation view</string>
    <string name="list_fragment_search_restaurant">Rechercher restaurants</string>
    <string name="speech_prompt">speech prompt</string>
    <string name="speech_not_supported">speech not supported</string>
    <string name="settings_zoom_title">settings zoom title</string>
    <string name="settings_search_radius_title">radius between 1500 and 10500</string>
    <string name="settings_notification_title">settings notification title</string>
    <string name="settings_save_text">save settings</string>
    <string name="settings_radius_limit_erro">Put a value between limit settings</string>
    <string name="settings_saved_value">Values entered are saved</string>
    <string name="male">Male</string>
    <string name="female">Female</string>


</resources>