<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/details_restaurant_activity"
    tools:context=".activities.DetailsRestaurantActivity">



        <ImageView
            android:id="@+id/details_fragment_image"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/reunion"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:contentDescription="@string/details_restaurant_activity_image"
            />





        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/details_fragment_floating_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:contentDescription="@string/details_restaurant_activity_floating_button"
            app:layout_constraintTop_toBottomOf="@+id/details_fragment_image"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/details_fragment_cardview_info"
            android:layout_marginRight="15dp"
            android:clickable="true"
            android:src="@drawable/ic_baseline_check_circle_24"
            app:backgroundTint="@color/white"
            android:focusable="true"
            />



        <androidx.cardview.widget.CardView
            android:id="@+id/details_fragment_cardview_info"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:cardCornerRadius="0dp"
            android:orientation="vertical"
            app:cardBackgroundColor="@color/google_red"
            app:layout_constraintTop_toBottomOf="@+id/details_fragment_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guideline7"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                >

                <TextView
                    android:id="@+id/details_restaurant_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activity_details_restaurant_name"
                    android:textSize="24sp"
                    android:textColor="@android:color/black"
                    />

                <RatingBar
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical" />

            </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="10dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_type"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_tiret"
                        android:layout_marginLeft="5dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/restaurant_address"
                        android:layout_marginLeft="5dp"
                        />

                </LinearLayout>


            </LinearLayout>


        </androidx.cardview.widget.CardView>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50" />

    <ImageButton
        android:id="@+id/ibCallDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/button_to_call_the_restaurant"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/ibLikeDetail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/ic_baseline_phone_24" />

    <ImageButton
        android:id="@+id/ibLikeDetail"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/button_to_add_the_restaurant_to_the_favourite"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/ibWebSiteDetails"
        app:layout_constraintStart_toEndOf="@+id/ibCallDetail"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

    <ImageButton
        android:id="@+id/ibWebSiteDetails"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/button_to_visit_the_website_of_the_restaurant"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ibLikeDetail"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        app:srcCompat="@drawable/ic_baseline_web_24" />

    <TextView
        android:id="@+id/tvCallDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/call"
        android:textColor="@color/google_red"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/ibCallDetail"
        app:layout_constraintStart_toStartOf="@+id/ibCallDetail" />

    <TextView
        android:id="@+id/tvLLikeDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/like"
        android:textColor="@color/google_red"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/ibLikeDetail"
        app:layout_constraintStart_toEndOf="@+id/ibCallDetail" />

    <TextView
        android:id="@+id/tvWebsiteDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/website"
        android:textColor="@color/google_red"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/ibWebSiteDetails"
        app:layout_constraintStart_toEndOf="@+id/ibLikeDetail" />

<androidx.recyclerview.widget.RecyclerView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:id="@+id/details_restaurant_activity_recycler_view"
    app:layout_constraintTop_toBottomOf="@+id/guideline5"
    app:layout_constraintBottom_toBottomOf="parent"
    />


</androidx.constraintlayout.widget.ConstraintLayout>

