<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/settings_radius_edit_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_parent"
        android:hint="@string/settings_search_radius_title"
        app:errorEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/settings_radius_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />



    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/settings_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_to_parent"
        android:layout_marginTop="282dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/settings_save_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_radius_edit_layout" />

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="example.javatpoint.com.radiobutton.MainActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:text="Single Radio Buttons" />



        <!--   Default RadioButtons  -->

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Radio Button 1"
            android:layout_marginTop="20dp"

            android:textSize="20dp" />
        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Radio Button 2"
            android:layout_marginTop="10dp"

            android:textSize="20dp" />


        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginTop="20dp"
            android:background="#B8B894" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:textSize="22dp"
            android:text="Radio button inside RadioGroup" />


        <!--   Customized RadioButtons  -->


        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroup">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/male"
                android:layout_marginTop="10dp"
                android:checked="false"
                android:textSize="20dp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/female"
                android:layout_marginTop="20dp"
                android:checked="false"

                android:textSize="20dp" />
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Show Selected"
            android:id="@+id/button_selected"

            android:layout_gravity="center_horizontal" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>